# tetris-puzzle-eval-generator

./: .gitignore  LICENSE  README.md  main.py  prompt_generator.py  pyproject.toml  question_generator.py  shape_generator.py
generators/: prompt_generator.py  shape_generator.py  shape_synthesizer.py
