[tool.poetry]
name = "tetris-rectangle-generator"
version = "0.1.0"
description = ""
authors = ["birdsean"]
readme = "README.md"
packages = [{include = "tetris_rectangle_generator"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
